end :) beatufy in progress...

--- a/RASA/data/rules.yml
+++ b/RASA/data/rules.yml
@@ -117,3 +117,7 @@ rules:
   - action: action_weather
 
 
+- rule: ask about source
+  steps:
+    - intent: info_source
+    - action: action_info_source
