--- a/RASA/config.yml
+++ b/RASA/config.yml
@@ -45,6 +45,20 @@ pipeline:
 #   - name: FallbackClassifier
 #     threshold: 0.3
 #     ambiguity_threshold: 0.1
+   - name: "DucklingEntityExtractor"
+     # url of the running duckling server
+     url: "http://localhost:8000"
+     # dimensions to extract
+     dimensions: [ "time", "number", "amount-of-money", "distance" ]
+     # allows you to configure the locale, by default the language is
+     # used
+     locale: "en_EN"
+     # if not set the default timezone of Duckling is going to be used
+     # needed to calculate dates from relative expressions like "tomorrow"
+     timezone: "Europe/Berlin"
+     # Timeout for receiving response from http url of the running duckling server
+     # if not set the default timeout of duckling http url is set to 3 seconds.
+     timeout: 3
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
@@ -53,7 +67,12 @@ policies:
 # # If you'd like to customize them, uncomment and adjust the policies.
 # # See https://rasa.com/docs/rasa/policies for more information.
    - name: MemoizationPolicy
+     max_history: 5
+     epochs: 100
    - name: RulePolicy
+     nlu_threshold: 0.4
+     core_threshold: 0.4
+     fallback_action_name: 'action_default_fallback'
    - name: UnexpecTEDIntentPolicy
      max_history: 5
      epochs: 100
