--- a/RASA/credentials.yml
+++ b/RASA/credentials.yml
@@ -9,7 +9,7 @@ rest:
 telegram:
   access_token: "6847728344:AAHfNTxjS2vaWq9mmZ9SidXRynrBFZNWbKU"
   verify: "rasa_journal_ai_bot"
-  webhook_url: "https://2704-31-189-11-62.ngrok-free.app/webhooks/telegram/webhook"    # TODO change @ ngrok start
+  webhook_url: "https://86ba-31-189-11-62.ngrok-free.app/webhooks/telegram/webhook"    # TODO change @ ngrok start
 
 #facebook:
 #  verify: "<verify>"
