--- a/RASA/credentials.yml
+++ b/RASA/credentials.yml
@@ -7,9 +7,9 @@ rest:
 #  # require any credentials
 
 telegram:
-  access_token: "6847728344:AAHfNTxjS2vaWq9mmZ9SidXRynrBFZNWbKU"
+  access_token: "<TOKEN>"
   verify: "rasa_journal_ai_bot"
-  webhook_url: "https://86ba-31-189-11-62.ngrok-free.app/webhooks/telegram/webhook"    # TODO change @ ngrok start
+  webhook_url: "<NGROK>/webhooks/telegram/webhook"    # TODO change @ ngrok start
 
 #facebook:
 #  verify: "<verify>"
